--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -4,12 +4,12 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"> <!-- set encoding -->
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- page scale control -->
     <link rel="icon" href="assets/logo.png" type="image/png"> <!-- set logo -->
-    <link rel="stylesheet" href="./css/reset.css"> <!-- set reset file -->
-    <link rel="stylesheet" href="./css/normalize.css"> <!-- set normalize file -->
+    <link rel="stylesheet" href="/css/reset.css"> <!-- set reset file -->
+    <link rel="stylesheet" href="/css/normalize.css"> <!-- set normalize file -->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- set fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- set fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet"> <!-- set fonts -->
-    <link rel="stylesheet" href="./css/style.css"> <!-- plug CSS file -->
+    <link rel="stylesheet" href="/css/style.css"> <!-- plug CSS file -->
     <link rel="stylesheet" href="./css/media.css">
     <title>cssBayan</title>
   </head>
