fix:fixed error.

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -24,11 +24,11 @@
           <div class="accord_item" id="accord_item1">
             <div class="accord_item_header" id="accord_item_header1">
               <h2>Meme 1</h2>
-              <img src="./assets/plus.png" alt="plus" class="icon_open" id="icon_open1">
-              <img src="./assets/close.png" alt="close" class="icon_close" id="icon_close1">  
+              <img src="/assets/plus.png" alt="plus" class="icon_open" id="icon_open1">
+              <img src="/assets/close.png" alt="close" class="icon_close" id="icon_close1">  
             </div>
             <div class="accord_item_body" id="accord_item_body1">
-              <img src="./assets/mem_1.jpg" alt="meme1" class="accord_item_img" id="accord_item_img1">
+              <img src="/assets/mem_1.jpg" alt="meme1" class="accord_item_img" id="accord_item_img1">
             </div>
           </div>
         </label>
