fix:fixed error

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -4,12 +4,12 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"> <!-- set encoding -->
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- page scale control -->
     <link rel="icon" href="assets/logo.png" type="image/png"> <!-- set logo -->
-    <link rel="stylesheet" href="/css/reset.css"> <!-- set reset file -->
-    <link rel="stylesheet" href="/css/normalize.css"> <!-- set normalize file -->
+    <link rel="stylesheet" href="./css/reset.css"> <!-- set reset file -->
+    <link rel="stylesheet" href="./css/normalize.css"> <!-- set normalize file -->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- set fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- set fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet"> <!-- set fonts -->
-    <link rel="stylesheet" href="/css/style.css"> <!-- plug CSS file -->
+    <link rel="stylesheet" href="./css/style.css"> <!-- plug CSS file -->
     <link rel="stylesheet" href="./css/media.css">
     <title>cssBayan</title>
   </head>
@@ -24,11 +24,11 @@
           <div class="accord_item" id="accord_item1">
             <div class="accord_item_header" id="accord_item_header1">
               <h2>Meme 1</h2>
-              <img src="/assets/plus.png" alt="plus" class="icon_open" id="icon_open1">
-              <img src="/assets/close.png" alt="close" class="icon_close" id="icon_close1">  
+              <img src="./assets/plus.png" alt="plus" class="icon_open" id="icon_open1">
+              <img src="./assets/close.png" alt="close" class="icon_close" id="icon_close1">  
             </div>
             <div class="accord_item_body" id="accord_item_body1">
-              <img src="/assets/mem_1.jpg" alt="meme1" class="accord_item_img" id="accord_item_img1">
+              <img src="./assets/mem_1.jpg" alt="meme1" class="accord_item_img" id="accord_item_img1">
             </div>
           </div>
         </label>
