fix: fixed checked effect

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -34,7 +34,7 @@
         </label>
       </section>
       <section class="section" id="section2">
-        <input type="radio" name="accord"  class="accord" id="accord2" checked="checked"/>
+        <input type="radio" name="accord"  class="accord" id="accord2"/>
         <label for="accord2">
           <div class="accord_item" id="accord_item2">
             <div class="accord_item_header" id="accord_item_header2">
@@ -49,7 +49,7 @@
         </label>
       </section>
       <section class="section" id="section3">
-        <input type="radio" name="accord"  class="accord" id="accord3" checked="checked"/>
+        <input type="radio" name="accord"  class="accord" id="accord3"/>
         <label for="accord3">
           <div class="accord_item" id="accord_item3">
             <div class="accord_item_header" id="accord_item_header3">
@@ -64,7 +64,7 @@
         </label>
       </section>
       <section class="section" id="section4">
-        <input type="radio" name="accord"  class="accord" id="accord4" checked="checked"/>
+        <input type="radio" name="accord"  class="accord" id="accord4"/>
         <label for="accord4">
           <div class="accord_item" id="accord_item4">
             <div class="accord_item_header" id="accord_item_header4">
@@ -79,7 +79,7 @@
         </label>
     </section>
     <section class="section" id="section5">
-      <input type="radio" name="accord"  class="accord" id="accord5" checked="checked"/>
+      <input type="radio" name="accord"  class="accord" id="accord5"/>
       <label form="accord5">
         <div class="accord_item" id="accord_item5">
           <div class="accord_item_header" id="accord_item_header5">
